--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ a:hover{
 
 /*Section Image*/
 #header-bg{
-    background: url('/assets/images/HomeHero.jpg');
+    background: url('assets/images/HomeHero.jpg');
     background-size: cover;
     height: calc(100vh - 70px);
 }
@@ -301,7 +301,7 @@ card-body{
 }
 
 .blogs{
-    background-image: url('/assets/images/blog/Background.png');
+    background-image: url('assets/images/blog/Background.png');
     
 }
 
